--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "exclude":["node_modules"],
     "compilerOptions": {
         "module": "commonjs",
-        "outDir" : "build",
+        "outDir" : "dist",
         "target": "es2017",
         "declaration": true,
         "sourceMap": true
